--- a/src/pages/Sort/Home/index.less
+++ b/src/pages/Sort/Home/index.less
@@ -9,6 +9,10 @@
   width: 100%;
 }
 
+.total {
+  margin: 10px 10px 0 10px;
+}
+
 .ant-spin-nested-loading > div > .ant-spin {
   max-height: none;
 }
