add detail page in sort; improve search page

--- a/src/pages/Search/index.less
+++ b/src/pages/Search/index.less
@@ -30,14 +30,15 @@
 
 .hot-card {
   margin: 10px 10px 0 10px;
+  padding: 0 10px;
   border-radius: 10px;
   background-image: linear-gradient(to bottom, #FFECEC 1%, #fff 15%);
   .hot-card-title {
     color: #FF7575;
-    padding: 10px 10px 0 10px;
+    padding: 10px 0 0 0;
   }
   .hot-card-item {
-    padding: 10px;
+    padding: 10px 0;
   }
   .hot-card-index-top {
     padding-right: 10px;
@@ -49,4 +50,16 @@
     color: #999;
     font-weight: bold;
   }
+}
+
+.ant-select-selection-item{
+  text-align: left;
+}
+
+.ant-select-selection-placeholder {
+  text-align: left;
+}
+
+.ant-skeleton-content {
+  padding-top: 10px;
 }
