use pubsub; change search routes

--- a/src/pages/Sort/Detail/BookItem/index.less
+++ b/src/pages/Sort/Detail/BookItem/index.less
@@ -1,7 +1,7 @@
 .book-item {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   padding: 10px 0;
   border-bottom: 1px solid rgba(0, 0, 0, .1);
 }
