use biquge api; add book menu; use localStorage store bookshelf

--- a/src/pages/BookInfo/Detail/index.less
+++ b/src/pages/BookInfo/Detail/index.less
@@ -68,3 +68,22 @@
     color: #999;
   }
 }
+
+.review-selector {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.review-item-content {
+  margin-top: -10px;
+  overflow: hidden;
+  position: relative;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+}
+
+.review-loadmore {
+  text-align: center;
+  padding-top: 10px;
+}
