--- a/src/pages/BookInfo/index.less
+++ b/src/pages/BookInfo/index.less
@@ -39,8 +39,9 @@
   height: 60px;
   background-color: #fff;
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   align-items: center;
+  padding: 0 10px;
 }
 
 // 毛玻璃
