--- a/src/pages/Bookshelf/index.less
+++ b/src/pages/Bookshelf/index.less
@@ -4,7 +4,7 @@
   .top-menu-item {
     display: flex;
     align-items: center;
-    justify-content: right;
+    justify-content: flex-end;
     margin-right: 20px;
   }
   .top-menu-icon {
