add progress and slide in read page; add recommend router

--- a/src/pages/Bookshelf/index.less
+++ b/src/pages/Bookshelf/index.less
@@ -40,6 +40,9 @@
 .book-info {
   color: #999;
   padding: 0px 5px 5px 5px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .check-box {
