--- a/src/pages/Recommend/index.less
+++ b/src/pages/Recommend/index.less
@@ -1,3 +1,9 @@
+#recommend {
+  height: calc(100vh - 106px);
+  width: 100%;
+  display: flex;
+}
+
 .ant-tabs-top > .ant-tabs-nav, .ant-tabs-bottom > .ant-tabs-nav,
 .ant-tabs-top > div > .ant-tabs-nav, .ant-tabs-bottom > div > .ant-tabs-nav {
   margin: 0 !important;
